fix: monaco editor resize and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,12 @@
 .App {
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
   display: grid;
   grid-template-areas:
-    'menu header header header header header header'
-    'menu main main main main main main'
-    'menu main main main main main main'
-    'menu main main main main main main';
+    "menu header header header header header header"
+    "menu main main main main main main"
+    "menu main main main main main main"
+    "menu main main main main main main";
   background-color: rgb(255, 193, 247);
 }
 
@@ -25,8 +24,7 @@
 
 .item3 {
   grid-area: main;
-  width: 100%;
-  height: 100%;
+  overflow: hidden;
 }
 
 .item4 {
